--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express-session": "^1.17.2",
     "helmet": "^5.0.2",
     "mongoose": "^6.2.7",
+    "npm": "^9.1.1",
     "redis": "^4.0.4",
     "serve-favicon": "^2.5.0",
     "underscore": "^1.13.2",
